...
	"myCart": "My Cart",
	"saveToWishList": "Save to Wishlist",
	"share": "Share",
	"cancel": "Cancel",
	"checkout": "Checkout",
	"clearCart": "Clear Cart",
	"myWishList": "My Wishlist",
	"yourBagIsEmpty": "Your bag is empty",
	"emptyCartSubtitle": "Looks like you haven’t added any items to the bag yet. Start shopping to fill it in.",
	"startShopping": "Start Shopping",
	"noFavoritesYet": "No favourites yet.",
	"emptyWishlistSubtitle": "Tap any heart next to a product to favorite. We’ll save them for you here!",
	"searchForItems": "Search for Items",
...
	"refundRequest": "Refund Request",
	"recentSearches": "History",
	"recents": "Recent",
	"byPrice": "By Price",
	"byCategory": "By Category",
	"noInternetConnection": "No internet connection",
	"settings": "Settings",
	"generalSetting": "General Setting",
	"getNotification": "Get Notification",
	"listMessages": "Notify Messages",
	"language": "Languages",
	"darkTheme": "Dark Theme",
	"rateTheApp": "Rate the app",
	"logout": "Logout",
	"login": "LogIn",
	"items": "items",
	"cart": "Cart",
	"shop": "Shop",
	"search": "Search",
	"blog": "Blog",
	"apply": "Apply",
	"reset": "Reset",
	"signInWithEmail": "Sign in with email ",
	"dontHaveAccount": "Don't have an account?",
	"signup": "Sign up",
	"welcome": "Welcome",
	"close": "Close",
	"or": "OR",
	"pleaseInput": "Please input fill in all fields",
	"searchingAddress": "Searching Address",
	"outOfStock": "Out of stock",
...
	"orderSuccessMsg1": "You can check status of your order by using our delivery status feature. You will receive an order confirmation e-mail with details of your order and a link to track its progress.",
	"orderSuccessTitle2": "Your account",
	"orderSuccessMsg2": "You can log to your account using e-mail and password defined earlier. On your account you can edit your profile data, check history of transactions, edit subscription to newsletter.",
	"signIn": "Sign In",
	"signUp": "Sign Up",
	"next": "Next",
	"done": "Done",
	"currencies": "Currencies",
	"sale": "Sale {percent}%",
	"updateUserInfor": "Update Profile",
	"update": "Update",
	"aboutUs": "About Us",
	"displayName": "Display name",
...
	"addedSuccessfully": "Added Successfully",
	"notFound": "Not Found",
	"error": "Error: {message}",
	"goBackHomePage": "Go back to home page",
	"noBlog": "Opps, the blog seems no longer exist",
	"prev": "Prev",
	"skip": "Skip",
	"download": "Download",
	"daysAgo": "{day} days ago",
	"hoursAgo": "{hour} hours ago",
	"minutesAgo": "{minute} minutes ago",
	"secondsAgo": "{second} seconds ago",
	"rateThisApp": "Rate this app",
...
