...

    var _indicatorSize = tabConfig.indicatorStyle == 'Rectangular'
        ? TabBarIndicatorSize.tab
        : TabBarIndicatorSize.label;

    return TabBar(
      key: const Key('mainTabBar'),
      controller: tabController,
      onTap: onTap,
      tabs: [
        for (var i = 0; i < tabData.length; i++)
          TabBarIcon(
            key: Key('TabBarIcon-$i'),
...
