...
    this.menuIcon,
  }) : super(key: key);

  @override
  Widget build(BuildContext context) {
    return RawMaterialButton(
      key: const Key('drawerMenu'),
      shape: RoundedRectangleBorder(
        borderRadius: BorderRadius.circular(
          config.iconRadius,
        ),
      ),
      elevation: 0,
...
