...
                            ),
                          ),
                          const SizedBox(
                            height: 30.0,
                          ),
/*                          CustomTextField(
                            key: const Key('registerFirstNameField'),
                            autofillHints: [AutofillHints.givenName],
                            onChanged: (value) => firstName = value,
                            textCapitalization: TextCapitalization.words,
                            nextNode: lastNameNode,
                            showCancelIcon: true,
                            decoration: InputDecoration(
                              labelText: S.of(context).firstName,
                              hintText: S.of(context).enterYourFirstName,
                            ),
                          ),
                          const SizedBox(height: 20.0),
                          CustomTextField(
                            key: const Key('registerLastNameField'),
                            autofillHints: [AutofillHints.familyName],
                            focusNode: lastNameNode,
                            nextNode: showPhoneNumberWhenRegister
                                ? phoneNumberNode
                                : emailNode,
                            showCancelIcon: true,
...
                            ),
                          ),*/
                          if (showPhoneNumberWhenRegister)
                            const SizedBox(height: 20.0),
                          if (showPhoneNumberWhenRegister)
                            CustomTextField(
                              key: const Key('registerPhoneField'),
                              focusNode: phoneNumberNode,
                              autofillHints: [AutofillHints.telephoneNumber],
                              nextNode: emailNode,
                              showCancelIcon: true,
                              onChanged: (value) => phoneNumber = value,
                              decoration: InputDecoration(
...
                                hintText: S.of(context).enterYourPhoneNumber,
                              ),
                              keyboardType: TextInputType.phone,
                            ),
                          const SizedBox(height: 20.0),
                          CustomTextField(
                            key: const Key('registerEmailField'),
                            focusNode: emailNode,
                            autofillHints: [AutofillHints.email],
                            nextNode: passwordNode,
                            controller: _emailController,
                            onChanged: (value) => emailAddress = value,
                            keyboardType: TextInputType.emailAddress,
                            decoration: InputDecoration(
                                labelText: S.of(context).enterYourEmail),
                            hintText: S.of(context).enterYourEmail,
                          ),
                          const SizedBox(height: 20.0),
                          CustomTextField(
                            key: const Key('registerPasswordField'),
                            focusNode: passwordNode,
                            autofillHints: [AutofillHints.password],
                            showEyeIcon: true,
                            obscureText: true,
                            onChanged: (value) => password = value,
                            decoration: InputDecoration(
...
                                ),
                              ],
                            ),
                          Row(
                            children: <Widget>[
                              Checkbox(
                                key: const Key('registerConfirmCheckbox'),
                                value: isChecked,
                                activeColor: Theme.of(context).primaryColor,
                                checkColor: Colors.white,
                                onChanged: (value) {
                                  isChecked = !isChecked;
                                  setState(() {});
...
                            child: Material(
                              color: Theme.of(context).primaryColor,
                              borderRadius:
                                  const BorderRadius.all(Radius.circular(5.0)),
                              elevation: 0,
                              child: MaterialButton(
                                key: const Key('registerSubmitButton'),
                                onPressed: value.loading == true
                                    ? null
                                    : () async {
                                        await _submitRegister(
                                          firstName: firstName ?? '',
                                          lastName: lastName ?? '',
...
