...
                    'Which language do you prefer?',
                    style: TextStyle(fontSize: 14),
                  ),
                ),
                Expanded(
                  child: ListView.builder(
                    key: const Key('changeLanguageList'),
                    itemCount: languages!.length,
                    itemBuilder: (context, i) {
                      return GestureDetector(
                        key: ValueKey(
                            'changeLanguageTo${languages![i]['text']}'),
                        onTap: () {
...
    return Align(
      alignment: Alignment.topRight,
      child: SafeArea(
        child: Padding(
          padding: const EdgeInsets.only(right: 16.0, top: 16),
          child: GestureDetector(
            key: const Key('changeLanguageIconButton'),
            onTap: () => _showModel(context),
            child: Consumer<AppModel>(
              builder: (context, value, child) => CircleButtonText(
                value.langCode!.toUpperCase(),
                radius: 16,
              ),
...
